# korori

./: .gitignore  .gitmodules  Makefile  Makefile.am  README.md  TODO.md  configure.ac  krr.c  usercode.c  usercode.h
include/krr/foundation/: cam.h  common.h  common_debug.h  log.h  math.h  mem.h  timer.h  types.h  util.h  window.h
include/krr/graphics/: common.h  font.h  font_internals.h  fontpp2d.h  model.h  objloader.h  shaderprog.h  shaderprog_internals.h  skybox.h  skybox_shader.h  spritesheet.h  terrain.h  terrain_shader3d.h  texture.h  texture_internals.h  texturedalphapp3d.h  texturedpp2d.h  texturedpp3d.h  types.h  util.h
include/krr/ui/: button.h
res/images/: miramar_bk-compressed.tga  miramar_ft-compressed.tga  miramar_lf-compressed.tga  miramar_rt-compressed.tga  zombie-stand-etc2rgba-swizzled.dds  zombie-stand-nv.dds  zombie-stand.dds
res/models/: fern-sheet.tpr
res/shaders/: doublemulticolorpp2d.frag  fontpp2d.frag  fontpp2d.vert  l_double_multicolor_polygon_program2d.vert  plainpp2d.frag  plainpp2d.vert  skybox.frag  skybox.vert  terrain3d.frag  terrain3d.vert  texturedalphapp3d.frag  texturedalphapp3d.vert  texturedpp2d.frag  texturedpp2d.vert  texturedpp3d.frag  texturedpp3d.vert
samples/: .gitignore  Makefile.am  advanced_model.c  dds.c  doublemulticolorshader.c  functs.c  functs.h  headless.c  main.c  readobjfile.c  readobjfile_manual.c  rotatingcube.c  rotatingplane.c  template.c  terrain.c  usercode.h
src/foundation/: cam.h  common.c  common.h  common_debug.h  log.h  math.c  math.h  mem.c  timer.c  timer.h  types.h  util.c  window.c  window.h
src/gl/: gl_LFont.c  gl_LFont.h  gl_LFont_internals.h  gl_LMultiColorPolygonProgram2D.h  gl_LPlainPolygonProgram2D.h  gl_LShaderProgram.c  gl_LShaderProgram.h  gl_LTexture.c  gl_LTexture.h  gl_LTexture_spritesheet.h  gl_common.h  gl_ldouble_multicolor_polygon_program2d.h  gl_lfont_polygon_program2d.h  gl_ltextured_polygon_program2d.h  gl_util.h
src/graphics/: common.h  doublemulticolorpp2d.c  doublemulticolorpp2d.h  font.c  font.h  fontpp2d.c  fontpp2d.h  glad.c  model.c  model.h  multicolorpp2d.c  multicolorpp2d.h  objloader.c  plainpp2d.c  plainpp2d.h  shaderprog.c  shaderprog.h  skybox.c  skybox_shader.c  spritesheet.c  spritesheet.h  terrain.c  terrain.h  terrain_shader3d.c  terrain_shader3d.h  texture.c  texture.h  texturedalphapp3d.c  texturedalphapp3d.h  texturedpp2d.c  texturedpp2d.h  texturedpp3d.c  texturedpp3d.h  types.h  util.c  util.h
src/ui/: button.c  button.h
test/: .gitignore  Makefile  advanced_model  advanced_model.c  doublemulticolorshader.c  functs.c  functs.h  headless.c  main.c  readobjfile.c  readobjfile_manual.c  rotatingcube.c  rotatingplane.c  template.c  terrain.c  usercode.h
